# circuit-gtk

./: .gitignore  Makefile  README.md  circuit.cpp  meson.build
Application/: App.cpp  App.h  Canvas.cpp  Canvas.h  CircuitSimulator.cpp  CircuitSimulator.h  CompInfo.h  Component.h  meson.build
Application/Components/: Capacitor.cpp  Capacitor.h  ComponentShape.cpp  ComponentShape.h  Components.h  IVSource.cpp  IVSource.h  IndepVSource.cpp  IndepVSource.h  Resistor.cpp  Resistor.h  Wire.cpp  Wire.h
Gtk/: EditDialog.cpp  EditDialog.h  EditWindow.cpp  EditWindow.h  GtkCoreApp.cpp  GtkCoreApp.h  GtkCoreWindow.cpp  GtkCoreWindow.h  GtkDraw.cpp  GtkDraw.h  editwindow.glade  menu.ui.xml  meson.build  popup.ui.xml
Shapes/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  meson.build
Useful/: ActionType.h  Color.cpp  Color.h  LinkedList.cpp  LinkedList.h  Primitive.h  RemoveTemplate.h  Signal.hpp  fast_gui.cpp  fast_gui.h  meson.build  report.cpp  report.h
Useful/Math/: Complex.cpp  Complex.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Vector.cpp  Vector.h
Useful/tinyxml/: tinyxml.h
